--- a/ui/src/app/component/page/index/index.component.html
+++ b/ui/src/app/component/page/index/index.component.html
@@ -1,3 +1,37 @@
-<p>
-  index works!
-</p>
+<div class="upper pt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-12">
+        <form class="pb-5">
+          <div class="input-group input-group-lg">
+            <input class="form-control" id="search" aria-describedby="searchHelp" placeholder="Terms...">
+            <span class="input-group-btn">
+              <button class="btn btn-primary" type="button">Search</button>
+            </span>
+          </div>
+        </form>
+        <div>
+          <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a class="nav-link active" href="#"><i class="far fa-comment-alt"></i> Activity Feed</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><i class="fa fa-align-justify"></i> Article Index</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><i class="fas fa-pencil-alt"></i> New Article</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+    <div class="row">
+      <div class="col-xl-12 py-5">
+        <h2>Activity Feed</h2>
+      </div>
+    </div>
+</div>
