--- a/ui/src/app/component/app/app.component.html
+++ b/ui/src/app/component/app/app.component.html
@@ -1,1 +1,7 @@
-  <router-outlet></router-outlet>
+
+<nav class="navbar navbar-dark bg-dark component-bg">
+  <div class="container">
+    <a class="navbar-brand" [routerLink]="['/browse']"> KOB</a>
+  </div>
+</nav>
+<router-outlet></router-outlet>
