Implemented store methods. Frontend prototyping

--- a/ui/src/app/component/page/index/index.component.html
+++ b/ui/src/app/component/page/index/index.component.html
@@ -19,7 +19,7 @@
               <a class="nav-link" href="#"><i class="fa fa-align-justify"></i> Article Index</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fas fa-pencil-alt"></i> New Article</a>
+              <a class="nav-link" href="/entry/new"><i class="fas fa-pencil-alt"></i> New Article</a>
             </li>
           </ul>
         </div>
