Implemented some indexing/search functionality

--- a/ui/src/app/component/page/entries-index/entries-index.component.html
+++ b/ui/src/app/component/page/entries-index/entries-index.component.html
@@ -1,1 +1,4 @@
-todo
+<div *ngFor="let entry of entryList.entries" style=>
+    <strong>{{entry.title}}</strong>
+    <p>{{entry.content}}</p>
+</div>
