--- a/ui/src/app/component/page/entries/entries.component.html
+++ b/ui/src/app/component/page/entries/entries.component.html
@@ -31,9 +31,11 @@
               <a class="nav-link" href="#" [routerLink]="['/entries', 'index']" [routerLinkActive]="['active']">
                 <i class="fa fa-align-justify"></i> Article Index</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/entry/new" [routerLink]="['/entries', 'new']" [routerLinkActive]="['active']">
-                <i class="fas fa-pencil-alt"></i> New Article</a>
+            
+            <li class="nav-item ml-auto">
+              <a class="nav-link mr-0" href="/entry/new" [routerLink]="['/entries', 'new']" [routerLinkActive]="['active']">
+                <i class="fas fa-pencil-alt"></i> New Article
+              </a>
             </li>
           </ul>
         </div>
