Implemented some slackbot bits

--- a/ui/src/app/component/page/entries-index/entries-index.component.html
+++ b/ui/src/app/component/page/entries-index/entries-index.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let entry of entryList.entries" style=>
+<div *ngFor="let entry of entryList.entries">
     <strong>{{entry.title}}</strong>
     <p>{{entry.content}}</p>
 </div>
