--- a/ui/src/app/component/page/login/login.component.html
+++ b/ui/src/app/component/page/login/login.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-dark bg-dark component-bg">
-  <div class="container">
+  <div class="container-fluid">
     <a class="navbar-brand" [routerLink]="['/entries', 'index']"> KOB</a>
   </div>
 </nav>
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-xl-12 py-5 text-center">
       <a class="btn btn-primary" href="/oauth/g/redirect">Login With Google</a>
