--- a/ui/src/scss/_variables.scss
+++ b/ui/src/scss/_variables.scss
@@ -8,3 +8,7 @@ $h2-font-size:  $font-size-base * 1.25;
 $h3-font-size:  $font-size-base;
 
 $default-border-color: #ddd;
+
+$breadcrumb-bg: none;
+$breadcrumb-padding-y: 0;
+$breadcrumb-padding-x: 0;
