--- a/ui/src/app/component/page/entries/entries.component.html
+++ b/ui/src/app/component/page/entries/entries.component.html
@@ -14,6 +14,14 @@
     <div class="row">
       <div class="col-xl-12 pt-3 px-3">
         <form class="pb-3">
+
+          <div  *ngFor="let alert of notify.notifications; let i = index;" (click)="notify.dismiss(i)" class="alert {{alert.cls}}" role="alert">
+            <button type="button" class="close"  aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          {{alert.message}}
+          </div>
+
           <div class="input-group">
             <input class="form-control" id="search" aria-describedby="searchHelp" placeholder="Terms...">
             <span class="input-group-append">
